k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: wandernest-deployment
  namespace: wandernest
  labels:
    app: wandernest

spec:
  replicas: 2

  selector:
    matchLabels:
      app: wandernest

  template:
    metadata:
      labels:
        app: wandernest

    spec:
      containers:
      - name: wandernest-container
        image: 747582940940.dkr.ecr.ap-south-1.amazonaws.com/wandernest:latest

        imagePullPolicy: Always

        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"

          limits:
            memory: "256Mi"
            cpu: "250m"

        readinessProbe:
          httpGet:
            path: /
            port: 80

          initialDelaySeconds: 5
          periodSeconds: 10

        livenessProbe:
          httpGet:
            path: /
            port: 80

          initialDelaySeconds: 15
          periodSeconds: 20
