k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: wandernest-service
  namespace: wandernest

spec:
  selector:
    app: wandernest

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

  type: ClusterIP
